--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "cv-maker",
+  "homepage": "https://github.com/samirls/cv-maker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "npm run build && gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.14.12"
